# CyberDefenceMultiAgentSystems

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-06-phase-2-simulator.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AlertFeed.tsx  Backdrop.tsx  DecisionCard.tsx  Director.tsx  Header.tsx  MessageFlow.tsx  MetricsPanel.tsx  PacketLayer.tsx  ReplayControls.tsx  ResourcePanel.tsx  TopologyMap.tsx  Tutorial.tsx  liveUI.test.tsx
frontend/src/data/: replay.json
frontend/src/lib/: director.test.ts  director.ts  graph.test.ts  graph.ts  liveStore.test.ts  liveStore.ts  packets.test.ts  packets.ts  replay.test.ts  replay.ts  replayContext.ts  types.ts  useLiveConnection.test.ts  useLiveConnection.ts
frontend/src/pages/: Dashboard.tsx  Inspector.tsx  Validator.tsx
frontend/src/styles/: theme.css
src/cdmas/agents/: factory.py
src/cdmas/agents/_common/: __init__.py  features.py  runner.py
src/cdmas/agents/aca/: __init__.py  __main__.py  agent.py  classifier.py  online.py
src/cdmas/agents/attackers/: __main__.py  base_attacker.py  ddos.py  lateral.py  port_scanner.py  schedule.py  utility.py  zero_day.py
src/cdmas/analytics/: metrics.py  reports.py  social_welfare.py  utilities.py
src/cdmas/common/: config.py
src/cdmas/coordination/: __init__.py  auction.py  coalition.py  failure.py  voting.py
src/cdmas/live/: __main__.py  app.py  session.py
src/cdmas/simulator/: attacks.py  clock.py  engine.py  packet.py  sampling.py  topology.py  traffic.py
src/cdmas/validator/: __main__.py  constraints.py  export.py  harness.py  runner.py
tests/acceptance/: test_scenarios.py
tests/agents/: test_features.py  test_vertical_slice.py
tests/agents/aca/: test_aca.py  test_classifier.py
tests/agents/attackers/: test_attackers.py
tests/agents/raa/: test_raa.py
tests/agents/rca/: test_policy.py  test_rca.py
tests/agents/tia/: test_tia.py
tests/agents/tma/: test_baseline.py  test_tma.py
tests/analytics/: test_metrics.py  test_reports.py
tests/common/logging/: test_event_log.py
tests/common/messaging/: test_acl.py  test_bus.py  test_kafka_bus.py  test_lamport.py  test_topics.py
tests/common/models/: test_coordination_payloads.py  test_enums.py  test_incident_payloads.py
tests/common/timing/: test_clock.py
tests/coordination/: test_integration.py  test_protocols.py
tests/live/: test_app.py  test_session.py
tests/simulator/: test_attacks.py  test_engine.py  test_sampling.py  test_simclock.py  test_topology.py  test_traffic.py
tests/validator/: test_constraints.py  test_export.py
(+40 files in other folders)
