[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdmas"
version = "0.1.0"
description = "Collaborative Cyber-Defense Multi-Agent System"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "Eden Adiv" }]

dependencies = [
    # Messaging
    "aiokafka>=0.10",
    # Data models / validation (FIPA-ACL schema, message payloads)
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # ML / classification
    "scikit-learn>=1.4",
    "numpy>=1.26",
    # Simulation API + visualization backend
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
    # Agents call the simulator REST API
    "httpx>=0.27",
    # Structured logging + persistence
    "structlog>=24.1",
    "sqlalchemy[asyncio]>=2.0",  # [asyncio] pulls greenlet, required by the async engine
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff==0.15.16",
    "mypy==2.1.0",
    "freezegun>=1.4",
]

[project.scripts]
# Per-agent / per-service entrypoints (filled in as subsystems land)
cdmas-tma = "cdmas.agents.tma.__main__:main"
cdmas-aca = "cdmas.agents.aca.__main__:main"
cdmas-rca = "cdmas.agents.rca.__main__:main"
cdmas-tia = "cdmas.agents.tia.__main__:main"
cdmas-raa = "cdmas.agents.raa.__main__:main"
cdmas-attacker = "cdmas.agents.attackers.__main__:main"
cdmas-simulator = "cdmas.simulator.__main__:main"
cdmas-validator = "cdmas.validator.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers -m 'not integration and not slow'"
timeout = 30
markers = [
    "integration: tests that require the message bus or simulator running",
    "slow: long-running tests",
    "acceptance: full six-scenario acceptance gate",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM", "RUF"]
ignore = [
    # on_message is an intentional optional override hook (no-op default) on BaseAgent.
    "B027",
    # Subscription.get(timeout=...) is the deliberate deadline-bounded bus API.
    "ASYNC109",
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["cdmas"]

# scikit-learn and aiokafka ship only partial type information; treat them as untyped.
[[tool.mypy.overrides]]
module = ["sklearn.*", "aiokafka.*"]
ignore_missing_imports = true
disallow_untyped_calls = false
